--- a/templates/hotel-results.html
+++ b/templates/hotel-results.html
@@ -313,6 +313,8 @@
     <script src="../js/supabase-client.js"></script>
     <script src="../js/auth-guard.js"></script>
 
+    <!-- Hotel API (defines SearchSession, HotelUtils, HotelAPI) -->
+    <script src="../js/hotel-api.js"></script>
     <script src="../js/hotel-results.js"></script>
 </body>
 
