--- a/templates/terms.html
+++ b/templates/terms.html
@@ -84,7 +84,7 @@
                         <li><i class="fas fa-check-circle"></i> All bookings are subject to availability and supplier
                             confirmation</li>
                         <li><i class="fas fa-check-circle"></i> Prices may change without prior notice due to
-                            availability, taxes, or supplier policies</li>
+                            unavailability, taxes, or supplier policies</li>
                         <li><i class="fas fa-check-circle"></i> Users are responsible for providing accurate booking
                             information</li>
                     </ul>
